v2.2.2/_sources/plugins/path_trace_info_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.path_trace_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.path_trace_info module -- Information module for Path Trace
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.2.2).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.path_trace_info_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.path_trace_info`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 3.1.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Path Trace.
- Get Path Trace by id.
- Returns a summary of all flow analyses stored. Results can be filtered by specified parameters.
- Returns result of a previously requested flow analysis by its Flow Analysis id.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.path_trace_info_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.3.0.0
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-catalystcenter_api_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-catalystcenter_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-catalystcenter_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-catalystcenter_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-catalystcenter_username:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-catalystcenter_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-catalystcenter_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-destIP"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-destip:

      .. rst-class:: ansible-option-title

      **destIP**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-destIP" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DestIP query parameter. Destination IP address.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-destPort"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-destport:

      .. rst-class:: ansible-option-title

      **destPort**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-destPort" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DestPort query parameter. Destination port.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-flowAnalysisId"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-flowanalysisid:

      .. rst-class:: ansible-option-title

      **flowAnalysisId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-flowAnalysisId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      FlowAnalysisId path parameter. Flow analysis request id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-gtCreateTime"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-gtcreatetime:

      .. rst-class:: ansible-option-title

      **gtCreateTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-gtCreateTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      GtCreateTime query parameter. Analyses requested after this time.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-lastUpdateTime"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-lastupdatetime:

      .. rst-class:: ansible-option-title

      **lastUpdateTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-lastUpdateTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      LastUpdateTime query parameter. Last update time.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-limit"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-limit:

      .. rst-class:: ansible-option-title

      **limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Limit query parameter. Number of resources returned.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ltCreateTime"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-ltcreatetime:

      .. rst-class:: ansible-option-title

      **ltCreateTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ltCreateTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      LtCreateTime query parameter. Analyses requested before this time.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-offset"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-offset:

      .. rst-class:: ansible-option-title

      **offset**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-offset" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Offset query parameter. Start index of resources returned (1-based).


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-order"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-order:

      .. rst-class:: ansible-option-title

      **order**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-order" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Order query parameter. Order by this field.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-periodicRefresh"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-periodicrefresh:

      .. rst-class:: ansible-option-title

      **periodicRefresh**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-periodicRefresh" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      PeriodicRefresh query parameter. Is analysis periodically refreshed?.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-protocol"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-protocol:

      .. rst-class:: ansible-option-title

      **protocol**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-protocol" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Protocol query parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortBy"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-sortby:

      .. rst-class:: ansible-option-title

      **sortBy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortBy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SortBy query parameter. Sort by this field.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sourceIP"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-sourceip:

      .. rst-class:: ansible-option-title

      **sourceIP**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sourceIP" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SourceIP query parameter. Source IP address.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sourcePort"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-sourceport:

      .. rst-class:: ansible-option-title

      **sourcePort**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sourcePort" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SourcePort query parameter. Source port.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-status"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-status:

      .. rst-class:: ansible-option-title

      **status**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-status" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Status query parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-taskId"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-taskid:

      .. rst-class:: ansible-option-title

      **taskId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-taskId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      TaskId query parameter. Task ID.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are path\_trace.PathTrace.retrieves\_all\_previous\_pathtraces\_summary, path\_trace.PathTrace.retrieves\_previous\_pathtrace,
   - Paths used are get /dna/intent/api/v1/flow-analysis, get /dna/intent/api/v1/flow-analysis/{flowAnalysisId},
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK

.. Seealso

See Also
--------

.. seealso::

   `Cisco DNA Center documentation for Path Trace RetrievesAllPreviousPathtracesSummary <https://developer.cisco.com/docs/dna-center/#!retrieves-all-previous-pathtraces-summary>`_
       Complete reference of the RetrievesAllPreviousPathtracesSummary API.
   `Cisco DNA Center documentation for Path Trace RetrievesPreviousPathtrace <https://developer.cisco.com/docs/dna-center/#!retrieves-previous-pathtrace>`_
       Complete reference of the RetrievesPreviousPathtrace API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Get all Path Trace
      cisco.catalystcenter.path_trace_info:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_api_port: "{{catalystcenter_api_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        headers: "{{my_headers | from_json}}"
        periodicRefresh: true
        sourceIP: string
        destIP: string
        sourcePort: 0
        destPort: 0
        gtCreateTime: 0
        ltCreateTime: 0
        protocol: string
        status: string
        taskId: string
        lastUpdateTime: 0
        limit: 0
        offset: 0
        order: string
        sortBy: string
      register: result
    - name: Get Path Trace by id
      cisco.catalystcenter.path_trace_info:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_api_port: "{{catalystcenter_api_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        headers: "{{my_headers | from_json}}"
        flowAnalysisId: string
      register: result




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.catalystcenter.path_trace_info_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco CATALYST Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"detailedStatus": {"aclTraceCalculation": "string", "aclTraceCalculationFailureReason": "string"}, "lastUpdate": "string", "networkElements": [{"accuracyList": [{"percent": 0, "reason": "string"}], "detailedStatus": {"aclTraceCalculation": "string", "aclTraceCalculationFailureReason": "string"}, "deviceStatistics": {"cpuStatistics": {"fiveMinUsageInPercentage": 0, "fiveSecsUsageInPercentage": 0, "oneMinUsageInPercentage": 0, "refreshedAt": 0}, "memoryStatistics": {"memoryUsage": 0, "refreshedAt": 0, "totalMemory": 0}}, "deviceStatsCollection": "string", "deviceStatsCollectionFailureReason": "string", "egressPhysicalInterface": {"aclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "id": "string", "interfaceStatistics": {"adminStatus": "string", "inputPackets": 0, "inputQueueCount": 0, "inputQueueDrops": 0, "inputQueueFlushes": 0, "inputQueueMaxDepth": 0, "inputRatebps": 0, "operationalStatus": "string", "outputDrop": 0, "outputPackets": 0, "outputQueueCount": 0, "outputQueueDepth": 0, "outputRatebps": 0, "refreshedAt": 0}, "interfaceStatsCollection": "string", "interfaceStatsCollectionFailureReason": "string", "name": "string", "pathOverlayInfo": [{"controlPlane": "string", "dataPacketEncapsulation": "string", "destIp": "string", "destPort": "string", "protocol": "string", "sourceIp": "string", "sourcePort": "string", "vxlanInfo": {"dscp": "string", "vnid": "string"}}], "qosStatistics": [{"classMapName": "string", "dropRate": 0, "numBytes": 0, "numPackets": 0, "offeredRate": 0, "queueBandwidthbps": "string", "queueDepth": 0, "queueNoBufferDrops": 0, "queueTotalDrops": 0, "refreshedAt": 0}], "qosStatsCollection": "string", "qosStatsCollectionFailureReason": "string", "usedVlan": "string", "vrfName": "string"}, "egressVirtualInterface": {"aclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "id": "string", "interfaceStatistics": {"adminStatus": "string", "inputPackets": 0, "inputQueueCount": 0, "inputQueueDrops": 0, "inputQueueFlushes": 0, "inputQueueMaxDepth": 0, "inputRatebps": 0, "operationalStatus": "string", "outputDrop": 0, "outputPackets": 0, "outputQueueCount": 0, "outputQueueDepth": 0, "outputRatebps": 0, "refreshedAt": 0}, "interfaceStatsCollection": "string", "interfaceStatsCollectionFailureReason": "string", "name": "string", "pathOverlayInfo": [{"controlPlane": "string", "dataPacketEncapsulation": "string", "destIp": "string", "destPort": "string", "protocol": "string", "sourceIp": "string", "sourcePort": "string", "vxlanInfo": {"dscp": "string", "vnid": "string"}}], "qosStatistics": [{"classMapName": "string", "dropRate": 0, "numBytes": 0, "numPackets": 0, "offeredRate": 0, "queueBandwidthbps": "string", "queueDepth": 0, "queueNoBufferDrops": 0, "queueTotalDrops": 0, "refreshedAt": 0}], "qosStatsCollection": "string", "qosStatsCollectionFailureReason": "string", "usedVlan": "string", "vrfName": "string"}, "flexConnect": {"authentication": "string", "dataSwitching": "string", "egressAclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "ingressAclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "wirelessLanControllerId": "string", "wirelessLanControllerName": "string"}, "id": "string", "ingressPhysicalInterface": {"aclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "id": "string", "interfaceStatistics": {"adminStatus": "string", "inputPackets": 0, "inputQueueCount": 0, "inputQueueDrops": 0, "inputQueueFlushes": 0, "inputQueueMaxDepth": 0, "inputRatebps": 0, "operationalStatus": "string", "outputDrop": 0, "outputPackets": 0, "outputQueueCount": 0, "outputQueueDepth": 0, "outputRatebps": 0, "refreshedAt": 0}, "interfaceStatsCollection": "string", "interfaceStatsCollectionFailureReason": "string", "name": "string", "pathOverlayInfo": [{"controlPlane": "string", "dataPacketEncapsulation": "string", "destIp": "string", "destPort": "string", "protocol": "string", "sourceIp": "string", "sourcePort": "string", "vxlanInfo": {"dscp": "string", "vnid": "string"}}], "qosStatistics": [{"classMapName": "string", "dropRate": 0, "numBytes": 0, "numPackets": 0, "offeredRate": 0, "queueBandwidthbps": "string", "queueDepth": 0, "queueNoBufferDrops": 0, "queueTotalDrops": 0, "refreshedAt": 0}], "qosStatsCollection": "string", "qosStatsCollectionFailureReason": "string", "usedVlan": "string", "vrfName": "string"}, "ingressVirtualInterface": {"aclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "id": "string", "interfaceStatistics": {"adminStatus": "string", "inputPackets": 0, "inputQueueCount": 0, "inputQueueDrops": 0, "inputQueueFlushes": 0, "inputQueueMaxDepth": 0, "inputRatebps": 0, "operationalStatus": "string", "outputDrop": 0, "outputPackets": 0, "outputQueueCount": 0, "outputQueueDepth": 0, "outputRatebps": 0, "refreshedAt": 0}, "interfaceStatsCollection": "string", "interfaceStatsCollectionFailureReason": "string", "name": "string", "pathOverlayInfo": [{"controlPlane": "string", "dataPacketEncapsulation": "string", "destIp": "string", "destPort": "string", "protocol": "string", "sourceIp": "string", "sourcePort": "string", "vxlanInfo": {"dscp": "string", "vnid": "string"}}], "qosStatistics": [{"classMapName": "string", "dropRate": 0, "numBytes": 0, "numPackets": 0, "offeredRate": 0, "queueBandwidthbps": "string", "queueDepth": 0, "queueNoBufferDrops": 0, "queueTotalDrops": 0, "refreshedAt": 0}], "qosStatsCollection": "string", "qosStatsCollectionFailureReason": "string", "usedVlan": "string", "vrfName": "string"}, "ip": "string", "linkInformationSource": "string", "name": "string", "perfMonCollection": "string", "perfMonCollectionFailureReason": "string", "perfMonStatistics": [{"byteRate": 0, "destIpAddress": "string", "destPort": "string", "inputInterface": "string", "ipv4DSCP": "string", "ipv4TTL": 0, "outputInterface": "string", "packetBytes": 0, "packetCount": 0, "packetLoss": 0, "packetLossPercentage": 0, "protocol": "string", "refreshedAt": 0, "rtpJitterMax": 0, "rtpJitterMean": 0, "rtpJitterMin": 0, "sourceIpAddress": "string", "sourcePort": "string"}], "role": "string", "ssid": "string", "tunnels": ["string"], "type": "string", "wlanId": "string"}], "networkElementsInfo": [{"accuracyList": [{"percent": 0, "reason": "string"}], "detailedStatus": {"aclTraceCalculation": "string", "aclTraceCalculationFailureReason": "string"}, "deviceStatistics": {"cpuStatistics": {"fiveMinUsageInPercentage": 0, "fiveSecsUsageInPercentage": 0, "oneMinUsageInPercentage": 0, "refreshedAt": 0}, "memoryStatistics": {"memoryUsage": 0, "refreshedAt": 0, "totalMemory": 0}}, "deviceStatsCollection": "string", "deviceStatsCollectionFailureReason": "string", "egressInterface": {"physicalInterface": {"aclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "id": "string", "interfaceStatistics": {"adminStatus": "string", "inputPackets": 0, "inputQueueCount": 0, "inputQueueDrops": 0, "inputQueueFlushes": 0, "inputQueueMaxDepth": 0, "inputRatebps": 0, "operationalStatus": "string", "outputDrop": 0, "outputPackets": 0, "outputQueueCount": 0, "outputQueueDepth": 0, "outputRatebps": 0, "refreshedAt": 0}, "interfaceStatsCollection": "string", "interfaceStatsCollectionFailureReason": "string", "name": "string", "pathOverlayInfo": [{"controlPlane": "string", "dataPacketEncapsulation": "string", "destIp": "string", "destPort": "string", "protocol": "string", "sourceIp": "string", "sourcePort": "string", "vxlanInfo": {"dscp": "string", "vnid": "string"}}], "qosStatistics": [{"classMapName": "string", "dropRate": 0, "numBytes": 0, "numPackets": 0, "offeredRate": 0, "queueBandwidthbps": "string", "queueDepth": 0, "queueNoBufferDrops": 0, "queueTotalDrops": 0, "refreshedAt": 0}], "qosStatsCollection": "string", "qosStatsCollectionFailureReason": "string", "usedVlan": "string", "vrfName": "string"}, "virtualInterface": [{"aclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "id": "string", "interfaceStatistics": {"adminStatus": "string", "inputPackets": 0, "inputQueueCount": 0, "inputQueueDrops": 0, "inputQueueFlushes": 0, "inputQueueMaxDepth": 0, "inputRatebps": 0, "operationalStatus": "string", "outputDrop": 0, "outputPackets": 0, "outputQueueCount": 0, "outputQueueDepth": 0, "outputRatebps": 0, "refreshedAt": 0}, "interfaceStatsCollection": "string", "interfaceStatsCollectionFailureReason": "string", "name": "string", "pathOverlayInfo": [{"controlPlane": "string", "dataPacketEncapsulation": "string", "destIp": "string", "destPort": "string", "protocol": "string", "sourceIp": "string", "sourcePort": "string", "vxlanInfo": {"dscp": "string", "vnid": "string"}}], "qosStatistics": [{"classMapName": "string", "dropRate": 0, "numBytes": 0, "numPackets": 0, "offeredRate": 0, "queueBandwidthbps": "string", "queueDepth": 0, "queueNoBufferDrops": 0, "queueTotalDrops": 0, "refreshedAt": 0}], "qosStatsCollection": "string", "qosStatsCollectionFailureReason": "string", "usedVlan": "string", "vrfName": "string"}]}, "flexConnect": {"authentication": "string", "dataSwitching": "string", "egressAclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "ingressAclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "wirelessLanControllerId": "string", "wirelessLanControllerName": "string"}, "id": "string", "ingressInterface": {"physicalInterface": {"aclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "id": "string", "interfaceStatistics": {"adminStatus": "string", "inputPackets": 0, "inputQueueCount": 0, "inputQueueDrops": 0, "inputQueueFlushes": 0, "inputQueueMaxDepth": 0, "inputRatebps": 0, "operationalStatus": "string", "outputDrop": 0, "outputPackets": 0, "outputQueueCount": 0, "outputQueueDepth": 0, "outputRatebps": 0, "refreshedAt": 0}, "interfaceStatsCollection": "string", "interfaceStatsCollectionFailureReason": "string", "name": "string", "pathOverlayInfo": [{"controlPlane": "string", "dataPacketEncapsulation": "string", "destIp": "string", "destPort": "string", "protocol": "string", "sourceIp": "string", "sourcePort": "string", "vxlanInfo": {"dscp": "string", "vnid": "string"}}], "qosStatistics": [{"classMapName": "string", "dropRate": 0, "numBytes": 0, "numPackets": 0, "offeredRate": 0, "queueBandwidthbps": "string", "queueDepth": 0, "queueNoBufferDrops": 0, "queueTotalDrops": 0, "refreshedAt": 0}], "qosStatsCollection": "string", "qosStatsCollectionFailureReason": "string", "usedVlan": "string", "vrfName": "string"}, "virtualInterface": [{"aclAnalysis": {"aclName": "string", "matchingAces": [{"ace": "string", "matchingPorts": [{"ports": [{"destPorts": ["string"], "sourcePorts": ["string"]}], "protocol": "string"}], "result": "string"}], "result": "string"}, "id": "string", "interfaceStatistics": {"adminStatus": "string", "inputPackets": 0, "inputQueueCount": 0, "inputQueueDrops": 0, "inputQueueFlushes": 0, "inputQueueMaxDepth": 0, "inputRatebps": 0, "operationalStatus": "string", "outputDrop": 0, "outputPackets": 0, "outputQueueCount": 0, "outputQueueDepth": 0, "outputRatebps": 0, "refreshedAt": 0}, "interfaceStatsCollection": "string", "interfaceStatsCollectionFailureReason": "string", "name": "string", "pathOverlayInfo": [{"controlPlane": "string", "dataPacketEncapsulation": "string", "destIp": "string", "destPort": "string", "protocol": "string", "sourceIp": "string", "sourcePort": "string", "vxlanInfo": {"dscp": "string", "vnid": "string"}}], "qosStatistics": [{"classMapName": "string", "dropRate": 0, "numBytes": 0, "numPackets": 0, "offeredRate": 0, "queueBandwidthbps": "string", "queueDepth": 0, "queueNoBufferDrops": 0, "queueTotalDrops": 0, "refreshedAt": 0}], "qosStatsCollection": "string", "qosStatsCollectionFailureReason": "string", "usedVlan": "string", "vrfName": "string"}]}, "ip": "string", "linkInformationSource": "string", "name": "string", "perfMonCollection": "string", "perfMonCollectionFailureReason": "string", "perfMonitorStatistics": [{"byteRate": 0, "destIpAddress": "string", "destPort": "string", "inputInterface": "string", "ipv4DSCP": "string", "ipv4TTL": 0, "outputInterface": "string", "packetBytes": 0, "packetCount": 0, "packetLoss": 0, "packetLossPercentage": 0, "protocol": "string", "refreshedAt": 0, "rtpJitterMax": 0, "rtpJitterMean": 0, "rtpJitterMin": 0, "sourceIpAddress": "string", "sourcePort": "string"}], "role": "string", "ssid": "string", "tunnels": ["string"], "type": "string", "wlanId": "string"}], "properties": ["string"], "request": {"controlPath": true, "createTime": 0, "destIP": "string", "destPort": "string", "failureReason": "string", "id": "string", "inclusions": ["string"], "lastUpdateTime": 0, "periodicRefresh": true, "previousFlowAnalysisId": "string", "protocol": "string", "sourceIP": "string", "sourcePort": "string", "status": "string"}}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

